--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="adaptation.css" />
 </head>
 
 <body>
@@ -229,12 +232,12 @@
             <form class="order-form" action="/keksby-mail" method="post">
                 <div class="order-form-group">
                     <label for="fullname">Представьтесь:</label>
-                    <input type="text" name="fullname" id="fullname" />
+                    <input type="text" name="fullname" id="fullname" required />
                 </div>
                 <div class="row">
                     <div class="order-form-group">
                         <label for="phone">Номер телефона:</label>
-                        <input type="text" name="phone" id="phone" />
+                        <input type="text" name="phone" id="phone" required />
                     </div>
                     <div class="order-form-group">
                         <label for="extra-phone">Доп. номер:</label>
@@ -243,12 +246,12 @@
                 </div>
                 <div class="order-form-group">
                     <label for="email">Email:</label>
-                    <input type="text" name="email" id="email" />
+                    <input type="text" name="email" id="email" required />
                 </div>
                 <div class="order-form-group">
                     <label class="select-label" for="quantity">Объём заказа:</label>
                     <div class="select row">
-                        <input type="checkbox" name="quantity" id="quantity">
+                        <input type="checkbox" name="quantity" id="quantity" required>
                         <p class="placeholder">От 5 до 10 баррелей в неделю</p>
                         <div class="check-icon"></div>
                     </div>
@@ -266,7 +269,7 @@
                 </div>
                 <div class="checkbox-area">
                     <label class="row">
-                        <input type="checkbox" name="subscription" />
+                        <input type="checkbox" name="subscription" required />
                         <div class="check-icon"></div>
                         <p>Я согласен с <a href="#">пользовательским соглашением</a></p>
                     </label>
