Adaptation in progress

--- a/index.html
+++ b/index.html
@@ -170,8 +170,8 @@
                     Сегодня мы провели дегустацию чего-то действительно новенького — крафтового кваса. Да, да, вы не ослышались! Спасибо Арсену и Руслану за то, что предоставили целую бочку своего напитка!
                 </p>
             </div>
-            <div class="row">
-                <a href="#" class="btn read-more">Читать далее</a>
+            <div class="btn-cite row">
+                <div class="btn-div"><a href="#" class="btn read-more">Читать далее</a></div>
                 <cite class="review-author">Газета столичный Стольник</cite>
             </div>
         </div>
