--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     <input type="text" name="fullname" id="fullname" required />
                 </div>
                 <div class="row">
-                    <div class="order-form-group">
+                    <div class="order-form-group phone-row">
                         <label for="phone">Номер телефона:</label>
                         <input type="text" name="phone" id="phone" required />
                     </div>
@@ -279,7 +279,7 @@
         </div>
     </section>
 
-    <footer class="footer flex-center">
+    <footer class="footer">
         <div class="big-container">
             <div class="logo-and-nav row">
                 <img src="img/logo.png" alt="logo" width="140px" height="76px" />
@@ -293,20 +293,19 @@
                 </div>
             </div>
             <div class="footer-bottom row">
-                <div class="footer-social">
-                    <a target="_blank" class="social-btn inst" href="https://instagram.com/htmlacademy">Инстаграм</a>
-                    <a target="_blank" class="social-btn fb" href="https://facebook.com/htmlacademy">Фейсбук</a>
-                    <a target="_blank" class="social-btn vk" href="https://vk.com/htmlacademy">Вконтакте</a>
+                <div class="footer-social row">
+                    <a target="_blank" class="social-btn inst" href="https://instagram.com/htmlacademy"></a>
+                    <a target="_blank" class="social-btn fb" href="https://facebook.com/htmlacademy"></a>
+                    <a target="_blank" class="social-btn vk" href="https://vk.com/htmlacademy"></a>
                 </div>
                 <div class="footer-copyright">
                     <p>
                         При перепечатке материалов ссылка на сайт обязательна!
                     </p>
                 </div>
-                <div class="developer-and-logo">
+                <div class="developer-and-logo row">
                     <a target="_blank" class="social-btn html" href="https://htmlacademy.ru">HTML Academy</a>
-                    <b class="developer">Разработчик:</b>
-                    <a target="_blank" href="https://htmlacademy.ru">HTML Academy</a>
+                    <p class="developer">Разработчик: <a target="_blank" href="https://htmlacademy.ru">HTML Academy</a></p>
                 </div>
             </div>
         </div>
