--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
     <meta name="viewport" content="width=device-width,initial-scale=1">
-
+    <title>Кваст</title>
+    <link rel="shortcut icon" href="img/Kvast-logo@0,1x.png" type="image/png">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="adaptation.css" />
