--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                         приключений!
                     </p>
                     <div class="item-buttons row">
-                        <a href="#" class="btn more-details">Подробнее</a>
-                        <a href="#" class="btn purchase">Купить</a>
+                        <a href="#" class="btn no-link more-details">Подробнее</a>
+                        <a href="#" class="btn no-link purchase">Купить</a>
                         <div class="price">
                             <p>150 р.</p>
                         </div>
@@ -92,8 +92,8 @@
                         Лёгкий и освежающий напиток поможет сохранять отличное настроение в течение всего дня.
                     </p>
                     <div class="item-buttons row">
-                        <a href="#" class="btn more-details">Подробнее</a>
-                        <a href="#" class="btn purchase">Купить</a>
+                        <a href="#" class="btn no-link more-details">Подробнее</a>
+                        <a href="#" class="btn no-link purchase">Купить</a>
                         <div class="price">90 р.</div>
                     </div>
                 </div>
@@ -101,8 +101,7 @@
         </div>
     </section>
 
-    <section class="advantage flex-center">
-        <a name="advantage"></a>
+    <section class="advantage flex-center" id="advantage">
         <div class="big-container">
             <div class="advantage-items row">
                 <div class="advantage-column advantage-brew">
@@ -127,8 +126,7 @@
         </div>
     </section>
 
-    <section class="kvast-reference">
-        <a name="history"></a>
+    <section class="kvast-reference" id="history">
         <div class="container">
             <h2 class="section-title">
                 Немного истории</h2>
@@ -180,14 +178,13 @@
                 </p>
             </div>
             <div class="btn-cite row">
-                <div class="btn-div"><a href="#" class="btn read-more">Читать далее</a></div>
+                <div class="btn-div"><a href="#" class="btn no-link read-more">Читать далее</a></div>
                 <cite class="review-author">Газета столичный Стольник</cite>
             </div>
         </div>
     </section>
 
-    <section class="range-table flex-center">
-        <a name="range"></a>
+    <section class="range-table flex-center" id="range">
         <div class="container">
             <h2 class="section-title">Ассортимент</h2>
             <table class="range">
@@ -231,9 +228,8 @@
     </section>
 
     <section class="to-order">
-        <a name="to-order"></a>
         <div class="container">
-            <h2 class="section-title">Заказать</h2>
+            <h2 class="section-title" id="to-order">Заказать</h2>
 
             <p class="order-tip">
                 Не ждите пока нас отрекламируют, как Вятский квас, и мы поднимем цены! Закажите настоящий крафтовый квас
@@ -321,6 +317,6 @@
             </div>
         </div>
     </footer>
-    <!-- <script src="js/main.js"></script> -->
+    <script src="js/main.js"></script>
     <script src="js/form.js"></script>
 </body>
