Mobile adaptation fix, added phone number pattern validation

--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
                 <div class="row">
                     <div class="order-form-group phone-row">
                         <label for="phone">Номер телефона:</label>
-                        <input type="text" name="phone" id="phone" class="required" required />
+                        <input type="text" name="phone" id="phone" class="required number-only" required />
                     </div>
                     <div class="order-form-group">
                         <label for="extra-phone">Доп. номер:</label>
-                        <input type="text" name="extra-phone" id="extra-phone" />
+                        <input type="text" name="phone" id="extra-phone" class="number-only" />
                     </div>
                 </div>
                 <div class="order-form-group">
